--- a/configure.ac
+++ b/configure.ac
@@ -1,32 +1,32 @@
 dnl $Header: $
 dnl
-dnl configure.ac 
+dnl configure.ac
 dnl
 dnl --------------------------------------------------------------------------------
 dnl Copyright (c) 2008, Lawrence Livermore National Security, LLC. Produced at
 dnl the Lawrence Livermore National Laboratory. Written by Dong H. Ahn <ahn1@llnl.gov>.
 dnl LLNL-CODE-409469. All rights reserved.
-dnl 
+dnl
 dnl  This file is part of LaunchMON. For details, see
 dnl  https://computing.llnl.gov/?set=resources&page=os_projects
-dnl 
+dnl
 dnl  Please also read LICENSE -- Our Notice and GNU Lesser General Public License.
-dnl 
-dnl 
+dnl
+dnl
 dnl  This program is free software; you can redistribute it and/or modify it under the
 dnl  terms of the GNU General Public License (as published by the Free Software
 dnl  Foundation) version 2.1 dated February 1999.
-dnl 
+dnl
 dnl  This program is distributed in the hope that it will be useful, but WITHOUT ANY
 dnl  WARRANTY; without even the IMPLIED WARRANTY OF MERCHANTABILITY or
 dnl  FITNESS FOR A PARTICULAR PURPOSE. See the terms and conditions of the GNU
 dnl  General Public License for more details.
-dnl 
+dnl
 dnl  You should have received a copy of the GNU Lesser General Public License along
 dnl  with this program; if not, write to the Free Software Foundation, Inc., 59 Temple
 dnl  Place, Suite 330, Boston, MA 02111-1307 USA
 dnl --------------------------------------------------------------------------------
-dnl 
+dnl
 dnl   Update Log:
 dnl         Dec 28 2009 DHA: Deprecated X_AC_PREFIX_CONFIG_H to better support
 dnl                          binary distribution
@@ -40,30 +40,21 @@ dnl         Jun 06 2008 DHA: File created.
 dnl
 
 AC_PREREQ(2.59)
-AC_INIT(LaunchMON, 0.7.2, ahn1@llnl.gov)
-AC_SUBST(LMON_CURRENT, 1)
+AC_INIT(LaunchMON, 1.0, ahn1@llnl.gov)
+AC_SUBST(LMON_CURRENT, 2)
 AC_SUBST(LMON_REVISION, 0)
-AC_SUBST(LMON_AGE, 1)
+AC_SUBST(LMON_AGE, 0)
 AC_CONFIG_AUX_DIR([config])
 AC_CONFIG_SRCDIR([configure.ac])
 AC_CONFIG_HEADER([config.h])
-AM_INIT_AUTOMAKE(launchmon, 0.7.2)
+AM_INIT_AUTOMAKE(launchmon, 1.0)
 AC_CANONICAL_HOST
-
-
-dnl -----------------------------------------------
-dnl per Todd Gamblin's suggestion... the following
-dnl allows you to export config.h without conflicting
-dnl other dependent packages 
-dnl -----------------------------------------------
-dnl X_AC_PREFIX_CONFIG_H([lmon-config.h])
-dnl AC_SUBST(BUILD_FLAGS, -DFOR_LAUNCHMON_BUILD=1)
 
 
 dnl -----------------------------------------------
 dnl Checks for the OS and CPU type
 dnl -----------------------------------------------
-X_AC_OS_ISA
+X_AC_PLATFORM
 
 
 dnl -----------------------------------------------
@@ -100,16 +91,16 @@ X_AC_TRACING_COST
 dnl -----------------------------------------------
 dnl Checks for the Resource Manager type
 dnl -----------------------------------------------
-X_AC_RM
+dnl X_AC_RM
 
-AC_MSG_CHECKING(whether a supported MPI job launcher has been found)  
-if test -z "$ac_job_launcher_path" ; then
-  AC_MSG_ERROR([No supported MPI job launcher has been found])
-else
-  AC_DEFINE_UNQUOTED(TARGET_JOB_LAUNCHER_PATH,["$ac_job_launcher_path"], [launcher path])
-  AC_SUBST(TARGET_JOB_LAUNCHER_PATH,$ac_job_launcher_path)
-  AC_MSG_RESULT([$ac_job_launcher_bits bit $ac_job_launcher_path])
-fi
+dnl AC_MSG_CHECKING(whether a supported MPI job launcher has been found)
+dnl if test -z "$ac_job_launcher_path" ; then
+dnl   AC_MSG_ERROR([No supported MPI job launcher has been found])
+dnl else
+dnl   AC_DEFINE_UNQUOTED(TARGET_JOB_LAUNCHER_PATH,["$ac_job_launcher_path"], [launcher path])
+dnl   AC_SUBST(TARGET_JOB_LAUNCHER_PATH,$ac_job_launcher_path)
+dnl   AC_MSG_RESULT([$ac_job_launcher_bits bit $ac_job_launcher_path])
+dnl fi
 
 
 dnl -----------------------------------------------
@@ -117,6 +108,7 @@ dnl Checks for NNODES and Ncores per node for test cases
 dnl -----------------------------------------------
 X_AC_TESTNNODES
 X_AC_NCORE_SMP
+X_AC_TEST_RM
 
 
 dnl -----------------------------------------------
@@ -186,11 +178,11 @@ AC_CHECK_HEADERS([sys/time.h stdio.h stdint.h syscall.h unistd.h libelf.h libelf
 
 if test "$ac_cv_header_libelf_h" = "yes" ; then
      AC_DEFINE(LOCATION_OF_LIBELFHEADER, [<libelf.h>],
-	[Define to header that first defines elf.])
+       [Define to header that first defines elf.])
 elif test "$ac_cv_header_libelf_libelf_h" = "yes"; then
      AC_DEFINE(HAVE_LIBELF_H, 1, [Define 1 if we have libelf/libelf.h])
      AC_DEFINE(LOCATION_OF_LIBELFHEADER, [<libelf/libelf.h>],
-	[Define to header that first defines elf.])
+       [Define to header that first defines elf.])
 fi
 
 
@@ -221,20 +213,20 @@ dnl configure's OUTPUTS
 dnl -----------------------------------------------
 AC_CONFIG_FILES([Makefile
                  tools/Makefile
-		 tools/ciod/Makefile
+                 tools/ciod/Makefile
                  tools/pmgr_collective/Makefile
-	  	 tools/pmgr_collective/src/Makefile
-		 tools/pmgr_collective/test/Makefile
+                 tools/pmgr_collective/src/Makefile
+                 tools/pmgr_collective/test/Makefile
                  tools/cobo/Makefile
-	  	 tools/cobo/src/Makefile
-		 tools/cobo/test/Makefile
-		 tools/alps/Makefile
-		 tools/alps/src/Makefile
+                 tools/cobo/src/Makefile
+                 tools/cobo/test/Makefile
+                 tools/alps/Makefile
+                 tools/alps/src/Makefile
                  launchmon/Makefile
-		 launchmon/src/Makefile
-		 launchmon/src/linux/Makefile
-		 launchmon/src/linux/lmon_api/Makefile
+                 launchmon/src/Makefile
+                 launchmon/src/linux/Makefile
+                 launchmon/src/linux/lmon_api/Makefile
                  launchmon/man/Makefile
-		 test/Makefile
-		 test/src/Makefile]) 
+                 test/Makefile
+                 test/src/Makefile])
 AC_OUTPUT
