--- a/launchmon/src/linux/lmon_api/Makefile.am
+++ b/launchmon/src/linux/lmon_api/Makefile.am
@@ -30,59 +30,64 @@
 ##
 ##  Update Log:
 ##        Jun 12 2008 DHA: Added header files to the dependency list
-##                         of lmonfeapi_la_SOURCES. 
+##                         of lmonfeapi_la_SOURCES.
 ##        Jun 06 2008 DHA: Taken from the old Makefile, converting
-##                         to automake Makefile.am 
+##                         to automake Makefile.am.
 ##        Mar 17 2008 DHA: Added PMGR Collective support.
 ##        Feb 09 2008 DHA: Added LLNS Copyright.
 ##        Dec 27 2006 DHA: Created file.
 ##
 
 if WITH_CIOD
-OPT_CIOD                     = -I$(top_srcdir)/@CIODLOC@ 
+CIOD_SUPPORT                 = -I$(top_srcdir)/@CIODLOC@
 endif
-OPT_GCRYPT                  = -I$(top_srcdir)/@GCRYPTLOC@ -I$(top_srcdir)/@GPGERRLOC@ 
 
-INCLUDES                     = -I@ARCHHEADER@ $(OPT_CIOD) $(OPT_GCRYPT) -I.. -I../.. -I$(top_srcdir)/@COMMLOC@ 
+GCRYPT_SUPPORT               = -I$(top_srcdir)/@GCRYPTLOC@ \
+                               -I$(top_srcdir)/@GPGERRLOC@
 
-BITS                         = @LIBBITSUFFIX@
+INCLUDES                     = -I@ARCHHEADER@ \
+                                $(OPT_CIOD) \
+                                $(GCRYPT_SUPPORT) \
+                               -I.. -I../.. \
+                               -I$(top_srcdir)/@COMMLOC@
 
 lib_LTLIBRARIES              = libmonbeapi.la libmonfeapi.la
 
 libmonfeapi_la_SOURCES       = lmon_fe.cxx \
-			       lmon_lmonp_msg.cxx \
-			       ../../sdbg_self_trace.cxx \
-			       ../../sdbg_opt.cxx \
-			       lmon_say_msg.cxx	\
-			       lmon_be_internal.hxx \
-			       ../../lmon_api/lmon_fe.h	\
-			       ../../lmon_api/lmon_lmonp_msg.h \
+                               lmon_lmonp_msg.cxx \
+                               lmon_say_msg.cxx \
+                               ../../sdbg_rm_map.cxx \
+                               ../../sdbg_self_trace.cxx \
+                               ../../sdbg_opt.cxx \
+                               ../../lmon_api/lmon_fe.h \
+                               ../../lmon_api/lmon_lmonp_msg.h \
                                ../../sdbg_opt.hxx \
-			       ../../lmon_api/lmon_say_msg.hxx	
+                               ../../sdbg_rm_map.hxx \
+                               ../../lmon_api/lmon_say_msg.hxx
 
 libmonfeapi_la_CFLAGS        = $(AM_CFLAGS)
 libmonfeapi_la_CXXFLAGS      = $(AM_CXXFLAGS)
 
 libmonfeapi_la_LDFLAGS       = -L$(top_srcdir)/@COMMLOC@ \
-			       -L$(top_srcdir)/@GCRYPTLOC@ \
-			       -L$(top_srcdir)/@GPGERRLOC@ \
-			       $(AM_LDFLAGS) \
-			       -version-info @LMON_CURRENT@:@LMON_REVISION@:@LMON_AGE@
+                               -L$(top_srcdir)/@GCRYPTLOC@ \
+                               -L$(top_srcdir)/@GPGERRLOC@ \
+                               $(AM_LDFLAGS) \
+                               -version-info @LMON_CURRENT@:@LMON_REVISION@:@LMON_AGE@
 
 libmonfeapi_la_LIBADD        = @LIBPTHREAD@ @LIBCOMM@ @LIBGCRYPT@ @LIBGPGERR@ @LIBRT@
 
 libmonbeapi_la_SOURCES       = lmon_be.cxx \
-			       lmon_be_comm.cxx \
-			       lmon_lmonp_msg.cxx \
-		               lmon_say_msg.cxx
+                               lmon_be_comm.cxx \
+                               lmon_lmonp_msg.cxx \
+                               lmon_say_msg.cxx
 
 libmonbeapi_la_CFLAGS        = $(AM_CFLAGS)
 libmonbeapi_la_CXXFLAGS      = $(AM_CXXFLAGS)
 
 libmonbeapi_la_LDFLAGS       = -L$(top_srcdir)/@COMMLOC@ \
-			       -L$(top_srcdir)/@GCRYPTLOC@ \
-			       -L$(top_srcdir)/@GPGERRLOC@ \
-			       $(AM_LDFLAGS) \
-			       -version-info @LMON_CURRENT@:@LMON_REVISION@:@LMON_AGE@ 
+                               -L$(top_srcdir)/@GCRYPTLOC@ \
+                               -L$(top_srcdir)/@GPGERRLOC@ \
+                               $(AM_LDFLAGS) \
+                               -version-info @LMON_CURRENT@:@LMON_REVISION@:@LMON_AGE@
 
-libmonbeapi_la_LIBADD        = @LIBCOMM@ @LIBGCRYPT@ @LIBGPGERR@ 
+libmonbeapi_la_LIBADD        = @LIBCOMM@ @LIBGCRYPT@ @LIBGPGERR@
