--- a/test/src/test.attach_4_kill.in
+++ b/test/src/test.attach_4_kill.in
@@ -31,13 +31,14 @@
 #  and kill the BE daemons.
 #
 #  Update Log:
+#        Oct 21 2011 DHA: Added dynamic RM detection support.
 #        Dec 17 2009 DHA: Added tminimum waittime
 #        Mar 06 2009 DHA: Changed bglrm to bgrm
 #        Dec 14 2008 DHA: configurable NUMNODES
 #        Jun 17 2008 DHA: Created file.
 #
  
-RM_TYPE=@RMTP@
+RM_TYPE=@TEST_RMTP@
 NUMNODES=@NNODES@
 
 #if test "x$RM_TYPE" = "xbgrm" ; then
@@ -57,14 +58,14 @@ export LMON_PREFIX=@LMONPREFIX@
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
 export LMON_FE_KILL_TEST=1
 
-if test "x$RM_TYPE" = "xslurm" ; then
+if test "x$RM_TYPE" = "xRC_slurm" ; then
   $MPI_JOB_LAUNCHER_PATH -n$NUMTASKS -N$NUMNODES -ppdebug `pwd`/hang_on_SIGUSR1@EXE@ &
-elif test "x$RM_TYPE" = "xbgrm" ; then 
+elif test "x$RM_TYPE" = "xRC_bgrm" ; then 
   $MPI_JOB_LAUNCHER_PATH -verbose 1 -np $NUMTASKS -exe `pwd`/hang_on_SIGUSR1@EXE@ -cwd `pwd` &
-elif test "x$RM_TYPE" = "xalps" ; then
+elif test "x$RM_TYPE" = "xRC_alps" ; then
   WAITAMOUNT=`expr $WAITAMOUNT`
   $MPI_JOB_LAUNCHER_PATH -n $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@ &
-elif test "x$RM_TYPE" = "xorte" ; then
+elif test "x$RM_TYPE" = "xRC_orte" ; then
   WAITAMOUNT=`expr $WAITAMOUNT`
   $MPI_JOB_LAUNCHER_PATH -gmca orte_enable_debug_cospawn_while_running 1 -np $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@ &
 else
