--- a/test/src/test.fe_regStatusCB.in
+++ b/test/src/test.fe_regStatusCB.in
@@ -30,13 +30,14 @@
 #  Attach the tool to a running program and unlock the hang. 
 #
 #  Update Log:
+#        Oct 21 2011 DHA: Added dynamic RM detection support.
 #        Jun 02 2009 DHA: Created file.
 #
 
-RM_TYPE=@RMTP@
+RM_TYPE=@TEST_RMTP@
 NUMNODES=@NNODES@
 
-if test "x$RM_TYPE" = "xbgrm" ; then
+if test "x$RM_TYPE" = "xRC_bgrm" ; then
   rm -f nohup.out
 fi
 
@@ -48,15 +49,15 @@ export LMON_PREFIX=@LMONPREFIX@
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
 export LMON_STATUS_CB_TEST=1
 
-if test "x$RM_TYPE" = "xslurm" ; then
+if test "x$RM_TYPE" = "xRC_slurm" ; then
   $MPI_JOB_LAUNCHER_PATH -n$NUMTASKS -N$NUMNODES -ppdebug `pwd`/hang_on_SIGUSR1@EXE@ &
-elif test "x$RM_TYPE" = "xbgrm" ; then 
+elif test "x$RM_TYPE" = "xRC_bgrm" ; then 
   WAITAMOUNT=`expr $WAITAMOUNT`
   nohup $MPI_JOB_LAUNCHER_PATH -verbose 1 -np $NUMTASKS -exe `pwd`/hang_on_SIGUSR1@EXE@ -cwd `pwd` &
-elif test "x$RM_TYPE" = "xalps" ; then
+elif test "x$RM_TYPE" = "xRC_alps" ; then
   WAITAMOUNT=`expr $WAITAMOUNT`
   $MPI_JOB_LAUNCHER_PATH -n $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@ &
-elif test "x$RM_TYPE" = "xorte" ; then
+elif test "x$RM_TYPE" = "xRC_orte" ; then
   WAITAMOUNT=`expr $WAITAMOUNT`
   $MPI_JOB_LAUNCHER_PATH -gmca orte_enable_debug_cospawn_while_running 1 -np $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@ 
 else
