--- a/test/src/test.launch_1.in
+++ b/test/src/test.launch_1.in
@@ -31,28 +31,31 @@
 #  one daemon per node, which unlocks the initial hang of all tasks. 
 #
 #  Update Log:
-#        Mar 06 2009 DHA: Changed bglrm to bgrm
+#        Oct 21 2011 DHA: Added dynamic RM detection support.
+#        Mar 06 2009 DHA: NUMTASKS=32
+RM_TYPE=@RMTP@Changed bglrm to bgrm
 #        Dec 14 2008 DHA: configurable NUMNODES
 #        Jun 13 2008 DHA: Created file.
 #
 
-RM_TYPE=@RMTP@
+export RM_TYPE=@TEST_RMTP@
+export MPI_JOB_LAUNCHER_PATH=@TJLPATH@
+export LMON_PREFIX=@LMONPREFIX@
+export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
+
 NUMNODES=@NNODES@
 NOHUP=""
-if test "x$RM_TYPE" = "xbgrm" ; then
+if test "x$RM_TYPE" = "xRC_bgrm" ; then
   NOHUP=nohup
   rm -f nohup.out
 fi
 
 NUMTASKS=`expr $NUMNODES \* @SMP@`
 
-export LMON_PREFIX=@LMONPREFIX@
-export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
-
-$NOHUP fe_launch_smoketest@EXE@ `pwd`/simple_MPI@EXE@ $NUMTASKS $NUMNODES pdebug `pwd`/be_kicker@EXE@
+fe_launch_smoketest@EXE@ `pwd`/simple_MPI@EXE@ $NUMTASKS $NUMNODES pdebug `pwd`/be_kicker@EXE@
 
 if test -f nohup.out; then
   sleep $NUMNODES
   cat nohup.out
 fi
-  
+
